added login logout register reset password and forgot password functionalities

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,3 +4,5 @@ JWT_SECRET_KEY=mysecretkeey
 JWT_EXPIRE=3d
 EXPIRE_COOKIE=3
 SMTP_SERVICE="gmail"
+SMTP_MAIL='madhavikulkarni366@gmail.com'
+SMTP_PASSWORD='xunl kfkz ndno qbee'
